Create newspaper token TFIDF matrix

--- a/Preprocess_data.ipynb
+++ b/Preprocess_data.ipynb
@@ -27,8 +27,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0bc5c67e",
+   "metadata": {},
+   "source": [
+    "## Preprocess data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "1e22879b",
    "metadata": {},
    "outputs": [],
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "2d12463d",
    "metadata": {},
    "outputs": [],
@@ -84,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "cd0f70ca",
    "metadata": {},
    "outputs": [
@@ -94,7 +102,7 @@
        "['antoine', 'going', 'eat', 'Apples', 'morning', 'run']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,9 +113,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "71fde516",
+   "execution_count": 30,
+   "id": "8c6ba0e4",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "FILE_IN = 'quotes-2020.json.bz2' # 525 chunks de 10_000\n",
+    "FILE_SPEAKERS = \"processed-speaker-2020_2.csv.bz2\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "71fde516",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -642,237 +663,31 @@
     }
    ],
    "source": [
-    "FILE_IN = 'quotes-2020.json.bz2' # 525 chunks de 10_000\n",
-    "FILE_SPEAKERS = \"processed-speaker-2020_2.csv.bz2\"\n",
-    "FILE_QUOTES = \"processed-quotes-2020_2.csv.bz2\"\n",
+    "FILE_QUOTES = \"nps-tokens-2020.csv.bz2\"\n",
     "\n",
     "json_reader = pd.read_json(FILE_IN,lines=True,chunksize=10_000,compression='bz2') \n",
     "\n",
     "PROBA_SPEAKER = 0.6\n",
     "\n",
-    "voc = set()\n",
     "\n",
     "for (counter, df_chunk) in enumerate(json_reader):\n",
     "    \n",
     "    df_chunk[\"tokens\"] = df_chunk[\"quotation\"].apply(preprocess)\n",
-    "    df_chunk = df_chunk.explode(\"urls\")\n",
-    "    df_chunk[\"newspaper\"] = df_chunk[\"urls\"].apply(extract_newspaper)\n",
+    "    #df_chunk = df_chunk.explode(\"urls\")\n",
+    "    df_chunk[\"newspapers\"] = df_chunk[\"urls\"].apply(lambda ln: [extract_newspaper(n) for n in ln])\n",
     "    \n",
     "    #df_chunk[\"probas\"] = df_chunk['probas'].apply(lambda probas: float(probas[0][1]))\n",
-    "    \n",
-    "    \n",
+    "        \n",
     "    print(f\"Chunk: {counter}\")\n",
     "    \n",
     "    #df_speakers = df_chunk[df_chunk['probas'] > PROBA_SPEAKER & df_chunk['speaker'] != \"None\"][[\"newspaper\", \"speaker\"]]\n",
-    "    df_quotes = df_chunk[[\"newspaper\", \"tokens\"]]\n",
+    "    df_quotes = df_chunk[[\"newspapers\", \"tokens\"]]\n",
     "\n",
     "    add_header = (counter==0)\n",
     "    write_mode = 'w' if counter == 0 else 'a'\n",
     "    #df_speakers.to_csv(FILE_SPEAKERS,header = add_header,index=False, mode=write_mode,compression='bz2')\n",
-    "    df_quotes.to_csv(FILE_QUOTES,header = add_header,index=False, mode=write_mode,compression='bz2')"
+    "    #df_quotes.to_csv(FILE_QUOTES,header = add_header,index=False, mode=write_mode,compression='bz2')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "c6de14eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(FILE_QUOTES, compression='bz2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "1a40aa83",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>newspaper</th>\n",
-       "      <th>tokens</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>israelnationalnews</td>\n",
-       "      <td>['espite', 'effort', 'partner', 'create', 'non...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>thehill</td>\n",
-       "      <td>['Department', 'Homeland', 'Security', 'livid'...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>indianexpress</td>\n",
-       "      <td>['Madhav', 'also', 'disclosed', 'illegal', 'br...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>patriotpost</td>\n",
-       "      <td>['get', 'floor']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>lifenews</td>\n",
-       "      <td>['get', 'floor']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17057648</th>\n",
-       "      <td>sootoday</td>\n",
-       "      <td>['got', 'sometimes', 'take', 'leap', 'faith', ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17057649</th>\n",
-       "      <td>cochraneeagle</td>\n",
-       "      <td>['got', 'sometimes', 'take', 'leap', 'faith', ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17057650</th>\n",
-       "      <td>farmweekly</td>\n",
-       "      <td>['got', 'think', 'long', 'term', 'augur', 'fai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17057651</th>\n",
-       "      <td>northqueenslandregister</td>\n",
-       "      <td>['got', 'think', 'long', 'term', 'augur', 'fai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17057652</th>\n",
-       "      <td>queenslandcountrylife</td>\n",
-       "      <td>['got', 'think', 'long', 'term', 'augur', 'fai...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>17057653 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        newspaper  \\\n",
-       "0              israelnationalnews   \n",
-       "1                         thehill   \n",
-       "2                   indianexpress   \n",
-       "3                     patriotpost   \n",
-       "4                        lifenews   \n",
-       "...                           ...   \n",
-       "17057648                 sootoday   \n",
-       "17057649            cochraneeagle   \n",
-       "17057650               farmweekly   \n",
-       "17057651  northqueenslandregister   \n",
-       "17057652    queenslandcountrylife   \n",
-       "\n",
-       "                                                     tokens  \n",
-       "0         ['espite', 'effort', 'partner', 'create', 'non...  \n",
-       "1         ['Department', 'Homeland', 'Security', 'livid'...  \n",
-       "2         ['Madhav', 'also', 'disclosed', 'illegal', 'br...  \n",
-       "3                                          ['get', 'floor']  \n",
-       "4                                          ['get', 'floor']  \n",
-       "...                                                     ...  \n",
-       "17057648  ['got', 'sometimes', 'take', 'leap', 'faith', ...  \n",
-       "17057649  ['got', 'sometimes', 'take', 'leap', 'faith', ...  \n",
-       "17057650  ['got', 'think', 'long', 'term', 'augur', 'fai...  \n",
-       "17057651  ['got', 'think', 'long', 'term', 'augur', 'fai...  \n",
-       "17057652  ['got', 'think', 'long', 'term', 'augur', 'fai...  \n",
-       "\n",
-       "[17057653 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.tokens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24b90a96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_news_tokens = df.groupby(\"newspaper\").apply(sum)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "468d9015",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_news_tokens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "117c07f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FILE_TOKENS_PER_NEWS =  \"token-per-newspaper-2020.csv.bz2\"\n",
-    "df_news_tokens.to_csv(FILE_TOKENS_PER_NEWS,header = True,index=False, mode=\"w\",compression='bz2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a45a24b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "\n",
-    "def dummy(doc):\n",
-    "    return doc\n",
-    "\n",
-    "vectorizer = TfidfVectorizer(\n",
-    "        tokenizer=dummy,\n",
-    "        preprocessor=dummy,\n",
-    "    )  \n",
-    "\n",
-    "docs = df.tokens\n",
-    "\n",
-    "X = vectorizer.fit_transform(docs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b7c8767",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
