Create newspaper speaker tfidf matrix

--- a/Create newspaper - token TF-IDF matrix.ipynb
+++ b/Create newspaper - token TF-IDF matrix.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "9b3ec6e6",
    "metadata": {},
    "outputs": [],
@@ -47,8 +47,6 @@
    ],
    "source": [
     "#===================================== Create newspaper set =====================================#\n",
-    "print(\"Create newspaper set\")\n",
-    "\n",
     "df_speaker_newspaper = pd.read_csv(FILE_SPEAKER_NEWSPAPER, compression='bz2') \n",
     "newspapers = set(df_speaker_newspaper.newspaper)"
    ]
@@ -596,8 +594,6 @@
    ],
    "source": [
     "#===================================== Create token vocabulary =====================================#\n",
-    "print(\"Create token vocabulary\")\n",
-    "\n",
     "vocabulary = Counter()\n",
     "\n",
     "csv_reader = pd.read_csv(FILE_QUOTES, chunksize=10_000,compression='bz2', converters={\"newspapers\": ast.literal_eval,\"tokens\":ast.literal_eval}) \n",
@@ -1153,8 +1149,6 @@
    ],
    "source": [
     "#===================================== Create frequency matrix =====================================#\n",
-    "print(\"Create frequency matrix\")\n",
-    "\n",
     "csv_reader = pd.read_csv(FILE_QUOTES, chunksize=10_000,compression='bz2', converters={\"newspapers\": ast.literal_eval,\"tokens\":ast.literal_eval}) \n",
     "\n",
     "newspapers = sorted(list(newspapers))\n",
@@ -1211,8 +1205,6 @@
    ],
    "source": [
     "#===================================== Create TF-IDF matrix =====================================#\n",
-    "print(\"Create TF-IDF matrix\")\n",
-    "\n",
     "transformer = TfidfTransformer()\n",
     "newspaper_token_tfidf = transformer.fit_transform(newspaper_token_frequency)"
    ]
@@ -1224,12 +1216,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sparse.save_npz(\"newspaper_token_tfidf.npz\", newspaper_token_tfidf)\n"
+    "sparse.save_npz(\"newspaper_token_tfidf.npz\", newspaper_token_tfidf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b20e69f0",
    "metadata": {},
    "outputs": [],
