--- a/Create newspaper - speaker TF-IDF matrix.ipynb
+++ b/Create newspaper - speaker TF-IDF matrix.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "f8fc353f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "from Constants import *\n",
     "\n",
     "from scipy.sparse import csr_matrix, dok_matrix\n",
     "from scipy import sparse\n",
@@ -23,8 +25,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FILE_SPEAKER_NEWSPAPER = \"speaker-newspaper-2020.csv.bz2\"\n",
     "df_speaker_newspaper = pd.read_csv(FILE_SPEAKER_NEWSPAPER, compression='bz2') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67e93b33",
+   "metadata": {},
+   "source": [
+    "## Create newspaper set"
    ]
   },
   {
@@ -34,9 +43,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#===================================== Create newspaper set =====================================#\n",
     "newspapers = set(df_speaker_newspaper.newspaper)\n",
-    "newspapers = sorted(list(newspapers))"
+    "newspapers = sorted(list(newspapers))\n",
+    "newspaper_to_index = {s:i for i,s in enumerate(newspapers)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60405eaa",
+   "metadata": {},
+   "source": [
+    "## Create speaker set"
    ]
   },
   {
@@ -46,29 +63,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#===================================== Create speaker set =====================================#\n",
     "speakers = set(df_speaker_newspaper.speaker)\n",
-    "speakers = sorted(list(speakers))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "5c977921",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "speakers = sorted(list(speakers))\n",
     "speaker_to_index = {s:i for i,s in enumerate(speakers)}"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "03285bcc",
+   "cell_type": "markdown",
+   "id": "d6f4271f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "newspaper_to_index = {s:i for i,s in enumerate(newspapers)}"
+    "## Create frequency matrix"
    ]
   },
   {
@@ -24685,17 +24690,17 @@
     "        print(index)\n",
     "    index_speaker = speaker_to_index[row['speaker']]\n",
     "    index_newspaper = newspaper_to_index[row['newspaper']]\n",
-    "    newspaper_speaker_frequency_matrix[index_newspaper, index_speaker] = row[\"count\"]"
+    "    newspaper_speaker_frequency_matrix[index_newspaper, index_speaker] = row[\"count\"]\n",
+    "    \n",
+    "newspaper_speaker_frequency_csr = newspaper_speaker_frequency_matrix.tocsr()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "57f8ee47",
+   "cell_type": "markdown",
+   "id": "a2a15615",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "newspaper_speaker_frequency_csr = newspaper_speaker_frequency_matrix.tocsr()"
+    "## Create TF-IDF matrix"
    ]
   },
   {
@@ -24710,23 +24715,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1bd9a8b0",
+   "metadata": {},
+   "source": [
+    "## Save TF-IDF matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "id": "64da872f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sparse.save_npz(\"newspaper_speaker_tfidf.npz\", newspaper_speaker_tfidf)"
+    "sparse.save_npz(FILE_NEWSPAPER_SPEAKER_TFIDF, newspaper_speaker_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5d20966",
+   "metadata": {},
+   "source": [
+    "## Exemple to load TF-IDF matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3fec0440",
    "metadata": {},
    "outputs": [],
    "source": [
-    "newspaper_speaker_tfidf = sparse.load_npz(\"newspaper_speaker_tfidf.npz\")"
+    "newspaper_speaker_tfidf = sparse.load_npz(FILE_NEWSPAPER_SPEAKER_TFIDF)"
    ]
   }
  ],
