Rename files constants

--- a/Create newspaper - speaker TF-IDF matrix.ipynb
+++ b/Create newspaper - speaker TF-IDF matrix.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "33684b3b",
    "metadata": {},
    "outputs": [],
@@ -58,12 +58,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "73ae1d57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "218414\n",
+      "218413\n"
+     ]
+    }
+   ],
    "source": [
     "speakers = set(df_speaker_newspaper.speaker)\n",
+    "print(len(speakers))\n",
+    "speakers.remove(\"none\")\n",
+    "print(len(speakers))\n",
     "speakers = sorted(list(speakers))\n",
     "speaker_to_index = {s:i for i,s in enumerate(speakers)}"
    ]
