--- a/Preprocess_quotes.ipynb
+++ b/Preprocess_quotes.ipynb
@@ -87,7 +87,7 @@
     }
    ],
    "source": [
-    "json_reader = pd.read_json(FILE_IN,lines=True,chunksize=10_000,compression='bz2') \n",
+    "json_reader = pd.read_json(FILE_QUOTES,lines=True,chunksize=10_000,compression='bz2') \n",
     "\n",
     "for (counter, df_chunk) in enumerate(json_reader):\n",
     "    print(f\"Chunk: {counter}\")\n",
@@ -104,7 +104,7 @@
     "    # Write result chunk by chunk in a csv compressed file\n",
     "    add_header = (counter==0)\n",
     "    write_mode = 'w' if counter == 0 else 'a'\n",
-    "    df_quotes.to_csv(FILE_QUOTES,header = add_header,index=False, mode=write_mode,compression='bz2')"
+    "    df_quotes.to_csv(FILE_NEWSPAPER_TOKEN,header = add_header,index=False, mode=write_mode,compression='bz2')"
    ]
   }
  ],
