--- a/Create newspaper - token TF-IDF matrix.ipynb
+++ b/Create newspaper - token TF-IDF matrix.ipynb
@@ -66,7 +66,7 @@
    },
    "outputs": [],
    "source": [
-    "csv_reader = pd.read_csv(FILE_QUOTES, chunksize=10_000,compression='bz2', converters={\"newspapers\": ast.literal_eval,\"tokens\":ast.literal_eval}) \n",
+    "csv_reader = pd.read_csv(FILE_NEWSPAPER_TOKEN, chunksize=10_000,compression='bz2', converters={\"newspapers\": ast.literal_eval,\"tokens\":ast.literal_eval}) \n",
     "\n",
     "#Create a Counter of all tokens\n",
     "vocabulary = Counter()\n",
@@ -97,7 +97,7 @@
    },
    "outputs": [],
    "source": [
-    "csv_reader = pd.read_csv(FILE_QUOTES, chunksize=10_000,compression='bz2', converters={\"newspapers\": ast.literal_eval,\"tokens\":ast.literal_eval}) \n",
+    "csv_reader = pd.read_csv(FILE_NEWSPAPER_TOKEN, chunksize=10_000,compression='bz2', converters={\"newspapers\": ast.literal_eval,\"tokens\":ast.literal_eval}) \n",
     "\n",
     "newspapers = sorted(list(newspapers))\n",
     "newspapers_to_index = {n:i for i, n in enumerate(newspapers)}\n",
