--- a/Create newspaper - speaker TF-IDF matrix.ipynb
+++ b/Create newspaper - speaker TF-IDF matrix.ipynb
@@ -24749,7 +24749,7 @@
    "id": "d5d20966",
    "metadata": {},
    "source": [
-    "## Exemple to load TF-IDF matrix"
+    "## Example to load TF-IDF matrix"
    ]
   },
   {
@@ -24779,7 +24779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
