--- a/Create newspaper - token TF-IDF matrix.ipynb
+++ b/Create newspaper - token TF-IDF matrix.ipynb
@@ -179,7 +179,7 @@
    "id": "69a57b37",
    "metadata": {},
    "source": [
-    "## Exemple to load TF-IDF matrix"
+    "## Example to load TF-IDF matrix"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
