--- a/Create newspaper - speaker TF-IDF matrix.ipynb
+++ b/Create newspaper - speaker TF-IDF matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f8fc353f",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "33684b3b",
    "metadata": {},
    "outputs": [],
@@ -38,14 +38,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "d7889788",
    "metadata": {},
    "outputs": [],
    "source": [
     "newspapers = set(df_speaker_newspaper.newspaper)\n",
     "newspapers = sorted(list(newspapers))\n",
-    "newspaper_to_index = {s:i for i,s in enumerate(newspapers)}"
+    "newspaper_to_index = {s:i for i,s in enumerate(newspapers)}\n",
+    "index_to_newspaper = {i:s for i,s in enumerate(newspapers)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0559d6a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['nbcwashington',\n",
+       " 'washington',\n",
+       " 'washingtonblade',\n",
+       " 'washingtoncitypaper',\n",
+       " 'washingtonexaminer',\n",
+       " 'washingtonian',\n",
+       " 'washingtonmonthly',\n",
+       " 'washingtontechnology',\n",
+       " 'washingtontimes']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[s for s in newspapers if \"washington\" in s]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "014a13d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2954"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newspaper_to_index[\"indiatimes\"]"
    ]
   },
   {
