--- a/Newspaper_speaker_statistics.ipynb
+++ b/Newspaper_speaker_statistics.ipynb
@@ -1933,7 +1933,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "227e92c3",
+   "id": "8587d5b7",
    "metadata": {},
    "outputs": [
     {
@@ -1965,7 +1965,7 @@
    "id": "c4873ed9",
    "metadata": {},
    "source": [
-    "As we can see, using t-SNE with a subset of the newspaper is computationaly feasible on commodity machines (this code takes."
+    "As we can see, using t-SNE with a subset of the newspaper is computationaly feasible on commodity machines (this code takes 30s to compute)."
    ]
   }
  ],
