Add wikidata scraping

--- a/Pywikibot2.0.ipynb
+++ b/Pywikibot2.0.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7a479f50",
+   "execution_count": 4,
+   "id": "522538aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fdfc16b9",
+   "id": "2d2372d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,12 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "7436fe82",
+   "id": "b3814528",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#If cannot find page, search for pages containing keyword and pick first one\n",
+    "# The pbm is that if cannot find page, search for pages containing keyword and pick first one\n",
+    "# => must get dump and look at alias and website\n",
     "\n",
     "owned_by_key = 'P127'\n",
     "site = pywikibot.Site('en', 'wikipedia')\n",
@@ -61,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "24f0a512",
+   "id": "470cb200",
    "metadata": {
     "scrolled": true
    },
@@ -4993,34 +4994,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "c512ce86",
+   "execution_count": 2,
+   "id": "c17c41fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_dic = {\n",
+    "    'algemeiner':['Q1961754', 'Q38787426'], \n",
+    "    'alibi':['Q468947', 'Q1618533', 'Q409493', 'Q9603694', 'Q4273984', 'Q4725653', 'Q4725652', 'Q4725654', 'Q4725664', 'Q682418', 'Q18786487', 'Q4725657', 'Q16020951', 'Q16960959', 'Q34644473', 'Q4489331', 'Q3874816', 'Q11850865', 'Q16746301', 'Q3985627'],\n",
+    "    'aliran': ['Q650383', 'Q65084132', 'Q96718060', 'Q222516', 'Q47521', 'Q143089', 'Q4726861', 'Q166620', 'Q650035', 'Q110701', 'Q695793', 'Q1387659', 'Q816321', 'Q18957', 'Q108777669', 'Q373342', 'Q12725', 'Q108424062', 'Q4022'],\n",
+    "    'aljazeera': ['Q13477', 'Q4727585', 'Q4727590', 'Q4296040', 'Q2829361', 'Q50036463', 'Q12245981', 'Q103926335', 'Q76451131', 'Q17668886', 'Q102551355', 'Q4703415', 'Q17601848', 'Q1283847', 'Q47035106', 'Q95680195', 'Q12204413', 'Q6676195']\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d09b8d6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "owned_by_key = 'P127'\n",
+    "official_website_key = 'P856'\n",
+    "site = pywikibot.Site('en', 'wikipedia')\n",
+    "repo = site.data_repository()\n",
+    "\n",
+    "def extract_website_owner(newspaper,QIDS):\n",
+    "    \n",
+    "    for QID in QIDS:\n",
+    "        current_QID = QID\n",
+    "        item = pywikibot.ItemPage(repo, QID)\n",
+    "        owner = None\n",
+    "        official_website = None\n",
+    "        if(item.exists()):\n",
+    "            if(item.isRedirectPage()):\n",
+    "                item = page.getRedirectTarget()\n",
+    "                \n",
+    "            claims = item.get()['claims'].toJSON()# Provides dict[\"property_key\"->property]\n",
+    "            \n",
+    "            official_website_property = claims.get(official_website_key)\n",
+    "            if(official_website_property!=None):\n",
+    "                official_website = official_website_property[0]['mainsnak']['datavalue']['value']\n",
+    "                \n",
+    "                if(newspaper in official_website):\n",
+    "                    owned_by_property = claims.get(owned_by_key)#Return None if property not found\n",
+    "                    if(owned_by_property!=None):\n",
+    "                        owner_id = owned_by_property[0]['mainsnak']['datavalue']['value']['numeric-id']\n",
+    "                        #Use ItemPage to obtain a dictionnary\n",
+    "                        data_found = pywikibot.ItemPage(repo, \"Q\" + str(owner_id))\n",
+    "                        #Get title in english\n",
+    "                        owner = data_found.get()['labels']['en']\n",
+    "                    break\n",
+    "                    \n",
+    "    return current_QID,official_website,owner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "032ad09f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Q1961754', 'http://www.algemeiner.com', None)\n",
+      "('Q4725653', 'http://alibi.uktv.co.uk', 'UKTV')\n",
+      "('Q4022', None, None)\n",
+      "('Q13477', 'https://www.aljazeera.com/', 'Al Jazeera Media Network')\n"
+     ]
     }
    ],
    "source": [
-    "newspaper = 'boston_herald'\n",
-    "\n",
-    "page = pywikibot.Page(site, newspaper)\n",
-    "page.exists()\n",
-    "\n",
-    "pywikibot."
+    "for newspaper,QIDS in sample_dic.items():\n",
+    "    print(extract_website_owner(newspaper,QIDS))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23faf3f1",
+   "id": "ff5826f7",
    "metadata": {},
    "outputs": [],
    "source": []
