Add SVA interpretation and recreate speaker TFIDFmatrix

--- a/Preprocess_speakers.ipynb
+++ b/Preprocess_speakers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "id": "32e2cf4f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "import bz2\n",
     "import json\n",
     "import re\n",
-    "import Constants\n",
+    "from Constants import *\n",
     "\n",
     "from urllib.parse import urlparse\n",
     "from tld import get_tld\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "10f2a28a",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "id": "9046311a",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
    "source": [
     "### Create speaker-newspaper dataframe\n",
     "df['newspaper','speaker','proba'] with possible duplicates if speaker was cited multiple times by the newspaper.\n",
-    "Quotes with the most probable speaker cited as None are kept and removed furhter down the pipeline if necessary."
+    "Quotes with the most probable speaker cited as None are kept and removed further down the pipeline if necessary."
    ]
   },
   {
@@ -671,7 +671,7 @@
     "    \n",
     "    add_header = (counter==0)\n",
     "    write_mode = 'w' if counter == 0 else 'a'\n",
-    "    df_speakers.to_csv(NEWSPAPER_SPEAKERS_FILE,header = add_header,index=False, mode=write_mode,compression='bz2')"
+    "    df_speakers.to_csv(FILE_NEWSPAPER_SPEAKER,header = add_header,index=False, mode=write_mode,compression='bz2')"
    ]
   },
   {
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "2b7a3510",
    "metadata": {},
    "outputs": [],
@@ -699,29 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "3be26f20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#The file is small enough to be loaded in memory\n",
-    "df = pd.read_csv(FILE_NEWSPAPER_SPEAKER,compression='bz2')\n",
-    "previous_speaker_count = len(df['speaker'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "a97319ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['speaker'] = df['speaker'].apply(process_speaker)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "cb06a6eb",
    "metadata": {},
    "outputs": [
@@ -735,6 +713,11 @@
     }
    ],
    "source": [
+    "#The file is small enough to be loaded in memory\n",
+    "df = pd.read_csv(FILE_NEWSPAPER_SPEAKER,compression='bz2')\n",
+    "\n",
+    "previous_speaker_count = len(df['speaker'].unique())\n",
+    "df['speaker'] = df['speaker'].apply(process_speaker)\n",
     "processed_speaker_count = len(df['speaker'].unique())\n",
     "\n",
     "print(f'The previous unique speaker count was {previous_speaker_count} and the new unique speaker count is {processed_speaker_count}')\n",
@@ -743,7 +726,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
+   "id": "0a0b9825",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save to memory\n",
+    "df.to_csv(FILE_NEWSPAPER_SPEAKER,header = True,index=False, mode='w',compression='bz2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "942a4e36",
    "metadata": {},
    "outputs": [],
@@ -754,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "id": "d0a29855",
    "metadata": {},
    "outputs": [
@@ -873,7 +867,7 @@
        "[2434410 rows x 3 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,8 +877,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75991850",
+   "metadata": {},
+   "source": [
+    "### Save processed speakers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "id": "aa9d3c89",
    "metadata": {},
    "outputs": [],
@@ -909,7 +911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
