Add distance per clusterW

--- a/PCA2D.ipynb
+++ b/PCA2D.ipynb
@@ -549,6 +549,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f723024e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_mean_distance_to_center(Y, newspaper_in_group):\n",
+    "    df = pd.DataFrame(\n",
+    "        {\n",
+    "            \"x\": Y[:, 0],\n",
+    "            \"y\": Y[:, 1],\n",
+    "            \"group\": newspaper_in_group.owner\n",
+    "        }\n",
+    "    )\n",
+    "    \n",
+    "    mean_per_group = df.groupby(\"group\").mean()\n",
+    "    df = df.join(mean_per_group,on =\"group\", rsuffix=\"_mean\")\n",
+    "    df[\"diff\"] = np.abs(df[\"x\"] - df[\"x_mean\"]) + np.abs(df[\"y\"] - df[\"y_mean\"])\n",
+    "    return df.groupby(\"group\")[\"diff\"].mean().sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 126,
    "id": "a61283a6",
    "metadata": {
@@ -567,9 +589,11 @@
     "            \"website\": newspaper_in_group.website\n",
     "        }\n",
     "    )\n",
+    "    \n",
+    "    top_culster_group = set(get_mean_distance_to_center(Y, newspaper_in_group).head(10).index)\n",
     "\n",
     "    # Show info on hover\n",
-    "    hover = HoverTool(tooltips=[('Newspaper', '@newspaper'),('Group name', '@group'),('QID', '@QID'),('Website', '@website')])\n",
+    "    hover = HoverTool(tooltips=[('Nespaper', '@newspaper'),('Group name', '@group'),('QID', '@QID'),('Website', '@website')])\n",
     "\n",
     "    tools = [hover, WheelZoomTool(), PanTool(), BoxZoomTool(), ResetTool(), SaveTool(), TapTool()]\n",
     "\n",
@@ -590,8 +614,13 @@
     "                  line_color = color_map,\n",
     "                  legend_label=group_name, source=source)\n",
     "\n",
-    "        # Hide all group by default\n",
-    "        scat.visible=visible_by_default\n",
+    "        \n",
+    "\n",
+    "        if not visible_by_default:\n",
+    "            scat.visible = group_name in top_culster_group\n",
+    "        else:\n",
+    "            scat.visible = True\n",
+    "        \n",
     "\n",
     "        # Open website on click\n",
     "        source.selected.js_on_change('indices', CustomJS(args=dict(s1=source), code=\"\"\"\n",
