--- a/PCA2D.ipynb
+++ b/PCA2D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "id": "a33ac6c2",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "id": "c8aa3f8e",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "id": "85b2690c",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "id": "a9c71c60",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "[420 rows x 4 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "id": "7a22f013",
    "metadata": {},
    "outputs": [
@@ -264,13 +264,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c6/nkvhnnln1739v3k9ryxjwq700000gn/T/ipykernel_97834/826135210.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/c6/nkvhnnln1739v3k9ryxjwq700000gn/T/ipykernel_99357/826135210.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  newspaper_in_group['owner'] = pd.Categorical(newspaper_in_group.owner)\n",
-      "/var/folders/c6/nkvhnnln1739v3k9ryxjwq700000gn/T/ipykernel_97834/826135210.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/c6/nkvhnnln1739v3k9ryxjwq700000gn/T/ipykernel_99357/826135210.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 9,
    "id": "1119c4c7",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
        "[420 rows x 5 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "id": "48353734",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "id": "cdc75427",
    "metadata": {},
    "outputs": [],
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "id": "534f5295",
    "metadata": {},
    "outputs": [],
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "id": "18e0484e",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
        "'2.4.2'"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f723024e",
    "metadata": {},
    "outputs": [],
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 21,
    "id": "a61283a6",
    "metadata": {
     "scrolled": true
@@ -593,7 +593,7 @@
     "    top_culster_group = set(get_mean_distance_to_center(Y, newspaper_in_group).head(10).index)\n",
     "\n",
     "    # Show info on hover\n",
-    "    hover = HoverTool(tooltips=[('Nespaper', '@newspaper'),('Group name', '@group'),('QID', '@QID'),('Website', '@website')])\n",
+    "    hover = HoverTool(tooltips=[('Newspaper', '@newspaper'),('Group name', '@group'),('QID', '@QID'),('Website', '@website')])\n",
     "\n",
     "    tools = [hover, WheelZoomTool(), PanTool(), BoxZoomTool(), ResetTool(), SaveTool(), TapTool()]\n",
     "\n",
@@ -653,8 +653,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2708b568",
+   "metadata": {},
+   "source": [
+    "### PCA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 22,
    "id": "8b7ab47d",
    "metadata": {},
    "outputs": [],
@@ -670,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 17,
    "id": "dfc19c90",
    "metadata": {},
    "outputs": [],
@@ -694,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 18,
    "id": "12104424",
    "metadata": {},
    "outputs": [],
@@ -706,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 33,
    "id": "b1d56a96",
    "metadata": {},
    "outputs": [],
@@ -729,13 +737,13 @@
     "        max_indices = np.argsort(-VT[i])[:top_num]\n",
     "        print(f'\\nThe maximum values for axis {i} are:\\n')\n",
     "        for index in max_indices:\n",
-    "            print(index_map[index])\n",
+    "            print(f'{index_map[index]}:{VT[i,index]:.4f}')\n",
     "        \n",
     "        \n",
     "        min_indices = np.argsort(VT[i])[:top_num]\n",
     "        print(f'\\nThe minimum for axis {i} are:\\n')\n",
     "        for index in min_indices:\n",
-    "            print(index_map[index])"
+    "            print(f'{index_map[index]}:{VT[i,index]:.4f}')"
    ]
   },
   {
@@ -748,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 34,
    "id": "4477fb2d",
    "metadata": {},
    "outputs": [
@@ -759,134 +767,133 @@
       "\n",
       "The maximum values for axis 0 are:\n",
       "\n",
-      "president donald trump\n",
-      "boris johnson\n",
-      "matt hancock\n",
-      "jose mourinho\n",
-      "nicola sturgeon\n",
-      "pep guardiola\n",
-      "rishi sunak\n",
-      "tedros adhanom ghebreyesus\n",
-      "leo varadkar\n",
-      "frank lampard\n",
+      "president donald trump:0.3809\n",
+      "boris johnson:0.3502\n",
+      "matt hancock:0.2453\n",
+      "jose mourinho:0.1696\n",
+      "nicola sturgeon:0.1390\n",
+      "pep guardiola:0.1381\n",
+      "rishi sunak:0.1328\n",
+      "tedros adhanom ghebreyesus:0.1295\n",
+      "leo varadkar:0.1273\n",
+      "frank lampard:0.1232\n",
       "\n",
       "The minimum for axis 0 are:\n",
       "\n",
-      " palmer\n",
-      " rowdy  roddy piper\n",
-      " superstar  billy graham\n",
-      " yoshida\n",
-      "justin gamble\n",
-      "marc horowitz\n",
-      "marc huber\n",
-      "marc humbert\n",
-      "marc j cohen\n",
-      "marc janssen\n",
+      " palmer:-0.0000\n",
+      " rowdy  roddy piper:-0.0000\n",
+      " superstar  billy graham:-0.0000\n",
+      " yoshida:-0.0000\n",
+      "justin gamble:0.0000\n",
+      "marc horowitz:0.0000\n",
+      "marc huber:0.0000\n",
+      "marc humbert:0.0000\n",
+      "marc j cohen:0.0000\n",
+      "marc janssen:0.0000\n",
       "\n",
       "The maximum values for axis 1 are:\n",
       "\n",
-      "president donald trump\n",
-      "joe biden\n",
-      "bernie sanders\n",
-      "andrew cuomo\n",
-      "anthony fauci\n",
-      "elizabeth warren\n",
-      "nancy pelosi\n",
-      "gavin newsom\n",
-      "pete buttigieg\n",
-      "mitch mcconnell\n",
+      "president donald trump:0.5393\n",
+      "joe biden:0.2080\n",
+      "bernie sanders:0.1765\n",
+      "andrew cuomo:0.1672\n",
+      "anthony fauci:0.1624\n",
+      "elizabeth warren:0.1254\n",
+      "nancy pelosi:0.1162\n",
+      "gavin newsom:0.1128\n",
+      "pete buttigieg:0.1019\n",
+      "mitch mcconnell:0.0903\n",
       "\n",
       "The minimum for axis 1 are:\n",
       "\n",
-      "boris johnson\n",
-      "matt hancock\n",
-      "jose mourinho\n",
-      "pep guardiola\n",
-      "nicola sturgeon\n",
-      "rishi sunak\n",
-      "leo varadkar\n",
-      "frank lampard\n",
-      "mary lou mcdonald\n",
-      "jurgen klopp\n",
+      "boris johnson:-0.1944\n",
+      "matt hancock:-0.1795\n",
+      "jose mourinho:-0.1259\n",
+      "pep guardiola:-0.1019\n",
+      "nicola sturgeon:-0.1006\n",
+      "rishi sunak:-0.0975\n",
+      "leo varadkar:-0.0915\n",
+      "frank lampard:-0.0913\n",
+      "mary lou mcdonald:-0.0888\n",
+      "jurgen klopp:-0.0888\n",
       "\n",
       "The maximum values for axis 2 are:\n",
       "\n",
-      "scott morrison\n",
-      "brendan murphy\n",
-      "annastacia palaszczuk\n",
-      "steven miles\n",
-      "greg hunt\n",
-      "karl stefanovic\n",
-      "gladys berejiklian\n",
-      "paul kelly\n",
-      "brad hazzard\n",
-      "josh frydenberg\n",
+      "scott morrison:0.6050\n",
+      "brendan murphy:0.2499\n",
+      "annastacia palaszczuk:0.1868\n",
+      "steven miles:0.1619\n",
+      "greg hunt:0.1556\n",
+      "karl stefanovic:0.1285\n",
+      "gladys berejiklian:0.1161\n",
+      "paul kelly:0.1149\n",
+      "brad hazzard:0.0985\n",
+      "josh frydenberg:0.0929\n",
       "\n",
       "The minimum for axis 2 are:\n",
       "\n",
-      "president donald trump\n",
-      "joe biden\n",
-      "bernie sanders\n",
-      "gavin newsom\n",
-      "elizabeth warren\n",
-      "nancy pelosi\n",
-      "adam schiff\n",
-      "mitch mcconnell\n",
-      "amy klobuchar\n",
-      "pete buttigieg\n",
+      "president donald trump:-0.0896\n",
+      "joe biden:-0.0582\n",
+      "bernie sanders:-0.0487\n",
+      "gavin newsom:-0.0348\n",
+      "elizabeth warren:-0.0343\n",
+      "nancy pelosi:-0.0315\n",
+      "adam schiff:-0.0301\n",
+      "mitch mcconnell:-0.0256\n",
+      "amy klobuchar:-0.0251\n",
+      "pete buttigieg:-0.0226\n",
       "\n",
       "The maximum values for axis 3 are:\n",
       "\n",
-      "justin trudeau\n",
-      "jason kenney\n",
-      "john horgan\n",
-      "theresa tam\n",
-      "patty hajdu\n",
-      "doug ford\n",
-      "sheldon keefe\n",
-      "nick nurse\n",
-      "geoff ward\n",
-      "adrian dix\n",
+      "justin trudeau:0.4604\n",
+      "jason kenney:0.3068\n",
+      "john horgan:0.2102\n",
+      "theresa tam:0.2073\n",
+      "patty hajdu:0.2013\n",
+      "doug ford:0.1817\n",
+      "sheldon keefe:0.1672\n",
+      "nick nurse:0.1556\n",
+      "geoff ward:0.1172\n",
+      "adrian dix:0.1153\n",
       "\n",
       "The minimum for axis 3 are:\n",
       "\n",
-      "president donald trump\n",
-      "andrew cuomo\n",
-      "gavin newsom\n",
-      "anthony fauci\n",
-      "joe biden\n",
-      "bernie sanders\n",
-      "amy klobuchar\n",
-      "nancy pelosi\n",
-      "scott morrison\n",
-      "president trump\n",
+      "president donald trump:-0.0812\n",
+      "andrew cuomo:-0.0657\n",
+      "gavin newsom:-0.0609\n",
+      "anthony fauci:-0.0601\n",
+      "joe biden:-0.0549\n",
+      "bernie sanders:-0.0381\n",
+      "amy klobuchar:-0.0337\n",
+      "nancy pelosi:-0.0291\n",
+      "scott morrison:-0.0288\n",
+      "president trump:-0.0280\n",
       "\n",
       "The maximum values for axis 4 are:\n",
       "\n",
-      "gavin newsom\n",
-      "frank vogel\n",
-      "steve kerr\n",
-      "doc rivers\n",
-      "joe maddon\n",
-      "dave roberts\n",
-      "lebron james\n",
-      "kyle shanahan\n",
-      "art laboe\n",
-      "mick cronin\n",
+      "gavin newsom:0.4118\n",
+      "frank vogel:0.2265\n",
+      "steve kerr:0.1936\n",
+      "doc rivers:0.1759\n",
+      "joe maddon:0.1638\n",
+      "dave roberts:0.1637\n",
+      "lebron james:0.1593\n",
+      "kyle shanahan:0.1318\n",
+      "art laboe:0.1317\n",
+      "mick cronin:0.1294\n",
       "\n",
       "The minimum for axis 4 are:\n",
       "\n",
-      "president donald trump\n",
-      "andrew cuomo\n",
-      "jb pritzker\n",
-      "anthony fauci\n",
-      "joe biden\n",
-      "justin trudeau\n",
-      "amy klobuchar\n",
-      "nancy pelosi\n",
-      "phil murphy\n",
-      "jason kenney\n",
-      "(420, 2)\n"
+      "president donald trump:-0.1043\n",
+      "andrew cuomo:-0.0783\n",
+      "jb pritzker:-0.0468\n",
+      "anthony fauci:-0.0400\n",
+      "joe biden:-0.0344\n",
+      "justin trudeau:-0.0333\n",
+      "amy klobuchar:-0.0332\n",
+      "nancy pelosi:-0.0314\n",
+      "phil murphy:-0.0302\n",
+      "jason kenney:-0.0300\n"
      ]
     }
    ],
@@ -905,8 +912,8 @@
     "##### Speaker clustering analysis\n",
     "\n",
     "Axis 0:\n",
-    "- Max: Popular speakers\n",
-    "- Min: Unpopular speakers\n",
+    "- Max: Frequent speakers\n",
+    "- Min: Non frequent speakers (rare)\n",
     "\n",
     "Axis 1:\n",
     "- Max: US speakers\n",
@@ -935,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 35,
    "id": "c28b4be0",
    "metadata": {},
    "outputs": [
@@ -946,133 +953,133 @@
       "\n",
       "The maximum values for axis 0 are:\n",
       "\n",
-      "people\n",
-      "going\n",
-      "get\n",
-      "time\n",
-      "like\n",
-      "think\n",
-      "one\n",
-      "would\n",
-      "know\n",
-      "really\n",
+      "people:0.2289\n",
+      "going:0.1894\n",
+      "get:0.1778\n",
+      "time:0.1730\n",
+      "like:0.1615\n",
+      "think:0.1614\n",
+      "one:0.1443\n",
+      "would:0.1341\n",
+      "know:0.1321\n",
+      "really:0.1315\n",
       "\n",
       "The minimum for axis 0 are:\n",
       "\n",
-      "AAAAA\n",
-      "AAAAAA\n",
-      "AAAAAAA\n",
-      "AAAAHHHH\n",
-      "AAAP\n",
-      "AAB\n",
-      "NurtureCloud\n",
-      "golem\n",
-      "goldspot\n",
-      "Nurul\n",
+      "AAAAA:-0.0000\n",
+      "AAAAAA:-0.0000\n",
+      "AAAAAAA:-0.0000\n",
+      "AAAAHHHH:-0.0000\n",
+      "AAAP:-0.0000\n",
+      "AAB:-0.0000\n",
+      "NurtureCloud:0.0000\n",
+      "golem:0.0000\n",
+      "goldspot:0.0000\n",
+      "Nurul:0.0000\n",
       "\n",
       "The maximum values for axis 1 are:\n",
       "\n",
-      "game\n",
-      "player\n",
-      "play\n",
-      "team\n",
-      "good\n",
-      "got\n",
-      "club\n",
-      "guy\n",
-      "season\n",
-      "really\n",
+      "game:0.3144\n",
+      "player:0.2493\n",
+      "play:0.1854\n",
+      "team:0.1756\n",
+      "good:0.1404\n",
+      "got:0.1291\n",
+      "club:0.1249\n",
+      "guy:0.1165\n",
+      "season:0.1103\n",
+      "really:0.1066\n",
       "\n",
       "The minimum for axis 1 are:\n",
       "\n",
-      "people\n",
-      "state\n",
-      "health\n",
-      "community\n",
-      "Trump\n",
-      "president\n",
-      "country\n",
-      "public\n",
-      "need\n",
-      "COVID\n",
+      "people:-0.1950\n",
+      "state:-0.1505\n",
+      "health:-0.1160\n",
+      "community:-0.1089\n",
+      "Trump:-0.1088\n",
+      "president:-0.1086\n",
+      "country:-0.0935\n",
+      "public:-0.0904\n",
+      "need:-0.0860\n",
+      "COVID:-0.0854\n",
       "\n",
       "The maximum values for axis 2 are:\n",
       "\n",
-      "UK\n",
-      "NHS\n",
-      "club\n",
-      "Government\n",
-      "player\n",
-      "need\n",
-      "support\n",
-      "Scotland\n",
-      "advice\n",
-      "Ireland\n",
+      "UK:0.2052\n",
+      "NHS:0.1650\n",
+      "club:0.1601\n",
+      "Government:0.1533\n",
+      "player:0.1183\n",
+      "need:0.1105\n",
+      "support:0.1090\n",
+      "Scotland:0.1005\n",
+      "advice:0.0796\n",
+      "Ireland:0.0763\n",
       "\n",
       "The minimum for axis 2 are:\n",
       "\n",
-      "like\n",
-      "guy\n",
-      "going\n",
-      "song\n",
-      "music\n",
-      "know\n",
-      "lot\n",
-      "really\n",
-      "kind\n",
-      "love\n",
+      "like:-0.2302\n",
+      "guy:-0.1597\n",
+      "going:-0.1363\n",
+      "song:-0.1225\n",
+      "music:-0.1170\n",
+      "know:-0.1135\n",
+      "lot:-0.1000\n",
+      "really:-0.0985\n",
+      "kind:-0.0952\n",
+      "love:-0.0936\n",
       "\n",
       "The maximum values for axis 3 are:\n",
       "\n",
-      "music\n",
-      "song\n",
-      "like\n",
-      "love\n",
-      "album\n",
-      "life\n",
-      "band\n",
-      "fucking\n",
-      "show\n",
-      "UK\n",
+      "music:0.2226\n",
+      "song:0.2212\n",
+      "like:0.1851\n",
+      "love:0.1567\n",
+      "album:0.1196\n",
+      "life:0.1194\n",
+      "band:0.1060\n",
+      "fucking:0.1016\n",
+      "show:0.1010\n",
+      "UK:0.0868\n",
       "\n",
       "The minimum for axis 3 are:\n",
       "\n",
-      "game\n",
-      "going\n",
-      "team\n",
-      "guy\n",
-      "state\n",
-      "play\n",
-      "player\n",
-      "coach\n",
-      "win\n",
-      "community\n",
+      "game:-0.2110\n",
+      "going:-0.1730\n",
+      "team:-0.1654\n",
+      "guy:-0.1382\n",
+      "state:-0.1243\n",
+      "play:-0.1120\n",
+      "player:-0.0932\n",
+      "coach:-0.0931\n",
+      "win:-0.0904\n",
+      "community:-0.0829\n",
       "\n",
       "The maximum values for axis 4 are:\n",
       "\n",
-      "Canada\n",
-      "Ontario\n",
-      "community\n",
-      "Canadian\n",
-      "Canadians\n",
-      "government\n",
-      "province\n",
-      "puck\n",
-      "year\n",
-      "Indigenous\n",
+      "Canada:0.2406\n",
+      "Ontario:0.1775\n",
+      "community:0.1607\n",
+      "Canadian:0.1571\n",
+      "Canadians:0.1450\n",
+      "government:0.1271\n",
+      "province:0.1249\n",
+      "puck:0.1109\n",
+      "year:0.0992\n",
+      "Indigenous:0.0900\n",
       "\n",
       "The minimum for axis 4 are:\n",
       "\n",
-      "president\n",
-      "Trump\n",
-      "American\n",
-      "player\n",
-      "club\n",
-      "President\n",
-      "know\n",
-      "UK\n",
-      "state\n",
-      "going\n"
+      "president:-0.1630\n",
+      "Trump:-0.1614\n",
+      "American:-0.0974\n",
+      "player:-0.0942\n",
+      "club:-0.0884\n",
+      "President:-0.0837\n",
+      "know:-0.0824\n",
+      "UK:-0.0820\n",
+      "state:-0.0779\n",
+      "going:-0.0726\n"
      ]
     }
    ],
@@ -1091,8 +1098,8 @@
     "##### Tokens clustering analysis\n",
     "\n",
     "Axis 0:\n",
-    "- Max: Popular words\n",
-    "- Min: Unpopular words (rare)\n",
+    "- Max: Frequent words\n",
+    "- Min: Non frequent words\n",
     "\n",
     "Axis 1:\n",
     "- Max: Sport\n",
