Clean and add country features into the analysis

--- a/Create newspaper - speaker TF-IDF matrix.ipynb
+++ b/Create newspaper - speaker TF-IDF matrix.ipynb
@@ -156,7 +156,8 @@
    "id": "67e93b33",
    "metadata": {},
    "source": [
-    "## Create newspaper set"
+    "### Create newspaper set and indexes\n",
+    "We create the sorted set of newspapesr and the indexes to link the matrix entries to newspapers."
    ]
   },
   {
@@ -199,7 +200,8 @@
    "id": "60405eaa",
    "metadata": {},
    "source": [
-    "## Create speaker set"
+    "### Create speaker set and indexes\n",
+    "We create the sorted set of speakers and the indexes to link the matrix entries to speakers."
    ]
   },
   {
@@ -220,9 +222,7 @@
    ],
    "source": [
     "speakers = set(df_newspaper_speaker_count.speaker)\n",
-    "print(len(speakers))\n",
     "speakers.remove(\"none\")\n",
-    "print(len(speakers))\n",
     "speakers = sorted(list(speakers))\n",
     "\n",
     "speaker_to_index = {s:i for i,s in enumerate(speakers)}\n",
@@ -241,7 +241,8 @@
    "id": "d6f4271f",
    "metadata": {},
    "source": [
-    "## Create frequency matrix"
+    "### Create frequency matrix\n",
+    "We generate a frequency matrix #newspaper x #speaker: entry (i,j) is the number of time speaker j appears in newspaper i."
    ]
   },
   {
@@ -522,7 +523,8 @@
    "id": "a2a15615",
    "metadata": {},
    "source": [
-    "## Create TF-IDF matrix"
+    "### Create TF-IDF matrix\n",
+    "Transform the frequency matrix into a TF-IDF matrix. Each row is normalised and each column is scaled by proportionnaly to the number of newspaper in which the speaker is quoted."
    ]
   },
   {
